{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 12,
  "lineage": "e01e28bd-45de-91e8-0b97-4eaf2d4c177c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338795266717:subnet/subnet-0b4c5c6dbe4aaeb20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.102.0/24",
            "default_for_az": false,
            "id": "subnet-0b4c5c6dbe4aaeb20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "338795266717",
            "state": "available",
            "tags": {
              "Name": "my-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0d6d4d19a8372e09c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617c50b76e1c51f6",
            "arn": "arn:aws:ec2:us-east-1:338795266717:instance/i-03116be04e6b7d925",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03116be04e6b7d925",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "slacko-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-012cb5f4cacc8e882",
            "private_dns": "ip-10-0-102-130.ec2.internal",
            "private_ip": "10.0.102.130",
            "public_dns": "ec2-34-201-47-182.compute-1.amazonaws.com",
            "public_ip": "34.201.47.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-086a04edff82661ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4c5c6dbe4aaeb20",
            "tags": {
              "Name": "mongodb"
            },
            "tags_all": {
              "Name": "mongodb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05e183dceeec0b404"
            ]
          },
          "dependencies": [
            "aws_key_pair.slacko-sshkey",
            "data.aws_ami.slacko-app",
            "data.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slacko-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617c50b76e1c51f6",
            "arn": "arn:aws:ec2:us-east-1:338795266717:instance/i-0fb4ec7ee6732418c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb4ec7ee6732418c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slacko-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7d18bccab061dc8",
            "private_dns": "ip-10-0-102-123.ec2.internal",
            "private_ip": "10.0.102.123",
            "public_dns": "ec2-44-192-112-70.compute-1.amazonaws.com",
            "public_ip": "44.192.112.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0891912f4b0e8ff87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4c5c6dbe4aaeb20",
            "tags": {
              "Name": "slacko-app"
            },
            "tags_all": {
              "Name": "slacko-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05e183dceeec0b404"
            ]
          },
          "dependencies": [
            "aws_key_pair.slacko-sshkey",
            "data.aws_ami.slacko-app",
            "data.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338795266717:security-group/sg-01481d32b1680f29b",
            "description": "Allow MongoDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01481d32b1680f29b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "allow_mongodb",
            "name_prefix": "",
            "owner_id": "338795266717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mongodb"
            },
            "tags_all": {
              "Name": "allow_mongodb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d4d19a8372e09c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-slacko",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338795266717:security-group/sg-03599eb73115f227c",
            "description": "Allow ssh and http port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03599eb73115f227c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "338795266717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d4d19a8372e09c"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}